// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button alignment 1`] = `
Array [
  <button
    class="css-1vmbacw e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-vb63mh e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-k5xbe4 e1lk8yn73"
  >
    click this button
  </button>,
]
`;

exports[`Storyshots Components|Form/Button sizes 1`] = `
Array [
  <button
    class="css-1riodoz e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-17iy6hf e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-k5xbe4 e1lk8yn73"
  >
    click this button
  </button>,
]
`;

exports[`Storyshots Components|Form/Button validations 1`] = `
Array [
  <button
    class="css-1n7kxml e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-1dbq55u e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-1yfwphr e1lk8yn73"
  >
    click this button
  </button>,
  <button
    class="css-k5xbe4 e1lk8yn73"
  >
    click this button
  </button>,
]
`;

exports[`Storyshots Components|Form/Button with knobs 1`] = `
<button
  class="css-1riodoz e1lk8yn73"
>
  💌  love letter to storybook team
</button>
`;

exports[`Storyshots Components|Form/Select sizes 1`] = `
Array [
  <select
    class="css-1rk2lkr e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
  <select
    class="css-p3s1kf e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
  <select
    class="css-13k1zov e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
]
`;

exports[`Storyshots Components|Form/Select validations 1`] = `
Array [
  <select
    class="css-1pvc7qr e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
  <select
    class="css-kdddv2 e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
  <select
    class="css-1hyanqr e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
  <select
    class="css-13k1zov e1lk8yn71"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>,
]
`;

exports[`Storyshots Components|Form/Textarea alignment 1`] = `
Array [
  <textarea
    align="end"
    class="css-ikfdgv e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
  <textarea
    align="center"
    class="css-7knv9k e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
  <textarea
    align="start"
    class="css-33eu3a e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
]
`;

exports[`Storyshots Components|Form/Textarea sizes 1`] = `
Array [
  <textarea
    class="css-1qzrepe e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
  <textarea
    class="css-1lgydmp e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
  <textarea
    class="css-33eu3a e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
]
`;

exports[`Storyshots Components|Form/Textarea validations 1`] = `
Array [
  <textarea
    class="css-sfd7lm e1lk8yn72"
    style="height:0"
    valid="error"
  >
    text
  </textarea>,
  <textarea
    class="css-j4g7hp e1lk8yn72"
    style="height:0"
    valid="warn"
  >
    text
  </textarea>,
  <textarea
    class="css-1rb826s e1lk8yn72"
    style="height:0"
    valid="valid"
  >
    text
  </textarea>,
  <textarea
    class="css-33eu3a e1lk8yn72"
    style="height:0"
  >
    text
  </textarea>,
]
`;

exports[`Storyshots Components|Form/Textarea with knobs (controlled) 1`] = `
<textarea
  class="css-33eu3a e1lk8yn72"
  style="height:0"
>
  OMG, multiple lines!

That is amazing
</textarea>
`;
